--- a/DevelopmentPortfolio.html
+++ b/DevelopmentPortfolio.html
@@ -6,14 +6,10 @@
 </head>
 <body>
 <ul>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html"
-    target="_blank">Home</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/Interests.html"
-    target="_blank">Interests</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/ComputerBiography.html"
-    target="_blank">Computer Biography</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/DevelopmentPortfolio.html"
-    target="_blank">Development Portfolio</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Home</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/Interests.html">Interests</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/ComputerBiography.html">Computer Biography</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/DevelopmentPortfolio.html">Development Portfolio</a></li>
 </ul>
 <span>
   <h1>Development Portfolio</h1>
