--- a/DevelopmentPortfolio.html
+++ b/DevelopmentPortfolio.html
@@ -6,16 +6,15 @@
 </head>
 <body>
 <ul>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Home</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/personalIntroduction.html">Home</a></li>
   <li><a href="file:///C:/Users/willc/PersonalBioProject/Interests.html">Interests</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/ComputerBiography.html">Computer Biography</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Computer Biography</a></li>
   <li><a href="file:///C:/Users/willc/PersonalBioProject/DevelopmentPortfolio.html">Development Portfolio</a></li>
 </ul>
-<span>
-  <h1>Development Portfolio</h1>
-</span>
+  <h1><span>Development Portfolio</span></h1>
 <div>
-  <p>  <a href="https://github.com/William1Carrasco?tab=repositories">My Github</a>
+   <p> <a href="https://github.com/William1Carrasco?tab=repositories">My Github</a>
+   </p>
    <p> <a href="https://github.com/William1Carrasco/Grace-Hopper/">Grace Hopper</a>
       We researched a famous computer scientist, and their contributions to the field.
    </p>
@@ -36,7 +35,6 @@
       Pseudo-classes to edit the values of text-align, text-decoration, width and
       background-color of different elements in more advanced ways than before.
    </p>
-  </p>
 </div>
 </body>
 </html>
