--- a/Interests.html
+++ b/Interests.html
@@ -6,18 +6,17 @@
 </head>
 <body>
 <ul>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Home</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/personalIntroduction.html">Home</a></li>
   <li><a href="file:///C:/Users/willc/PersonalBioProject/Interests.html">Interests</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/ComputerBiography.html">Computer Biography</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Computer Biography</a></li>
   <li><a href="file:///C:/Users/willc/PersonalBioProject/DevelopmentPortfolio.html">Development Portfolio</a></li>
 </ul>
-<span>
-  <h1>Interests</h1>
-</span>
+  <h1><span>Interests</span></h1>
 <div>
-  <p> When not in school, during breaks I'm ussually either baby sitting for families
+   <p> When not in school, during breaks I'm ussually either baby sitting for families
     in the Bay Area where my parents live, or working for my father's general
     contracting company.
+   </p>
    <p>In my free time I enjoy hiking and hunting for edible
     mushrooms. While there is hiking in the surrounding area of Chico, I haven't
     had much luck hunting for mushrooms.
@@ -27,9 +26,8 @@
     what you're looking for, lucky I have spent many hours learning how to
     correctly itentify them.
    </p>
-  </P>
 </div>
-<img src="http://www.messiah.edu/Oakes/fungi_on_wood/teeth%20and%20spine/images/Hericium%20americanum%20McSweeny.jpg">
+<img src="http://www.messiah.edu/Oakes/fungi_on_wood/teeth%20and%20spine/images/Hericium%20americanum%20McSweeny.jpg" alt="Mushroom">
 <a href="http://www.messiah.edu/Oakes/fungi_on_wood/teeth%20and%20spine/images/Hericium%20americanum%20McSweeny.jpg">
   image source</a>
 </body>
