--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 </head>
 <body>
 <ul>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Home</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/personalIntroduction.html">Home</a></li>
   <li><a href="file:///C:/Users/willc/PersonalBioProject/Interests.html">Interests</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/ComputerBiography.html">Computer Biography</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Computer Biography</a></li>
   <li><a href="file:///C:/Users/willc/PersonalBioProject/DevelopmentPortfolio.html">Development Portfolio</a></li>
 </ul>
-<span>
-  <h1>Computer Biography</h1>
-</span>
+  <h1><span>Computer Biography</span></h1>
 <div>
   <p> I don't have very much experience prior to what I've learned this semester
     about web developement. I'm familiar with computers in general, I've played
