--- a/PersonalIntroduction.html
+++ b/PersonalIntroduction.html
@@ -6,18 +6,17 @@
 </head>
 <body>
 <ul>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Home</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/personalIntroduction.html">Home</a></li>
   <li><a href="file:///C:/Users/willc/PersonalBioProject/Interests.html">Interests</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/ComputerBiography.html">Computer Biography</a></li>
+  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Computer Biography</a></li>
   <li><a href="file:///C:/Users/willc/PersonalBioProject/DevelopmentPortfolio.html">Development Portfolio</a></li>
 </ul>
-<span>
-  <h1>Personal Introduction</h1>
-</span>
+  <h1><span>Personal Introduction</span></h1>
 <div>
-  <p> My name is Will Carrasco, and I'm a 22 year old sudent at Chico State
+   <p>My name is Will Carrasco, and I'm a 22 year old sudent at Chico State
     University. I began my college education at Cuesta College, a Junior College
     in San Luis Obispo where I took a broad range of classes.
+   </p>
    <p>I studied there for 2 years, then transfored to San Rosa JC with the
     idea of focusing on Geology. Once I finished my last year at the JC I transfored
     to Chico and declared the major Geology. I went this pathway for a year, before
@@ -29,7 +28,6 @@
     would be a great field to get in to. This led me to changed my major to
     Computer Information Systems and here I am this current spring semester.
    </p>
-  </p>
 </div>
 </body>
 </html>
