--- a/PersonalIntroduction.html
+++ b/PersonalIntroduction.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <ul>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/personalIntroduction.html">Home</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/Interests.html">Interests</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Computer Biography</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/DevelopmentPortfolio.html">Development Portfolio</a></li>
-</ul>
+  <li><a href="personalIntroduction.html">Home</a></li>
+  <li><a href="Interests.html">Interests</a></li>
+  <li><a href="index.html">Computer Biography</a></li>
+  <li><a href="DevelopmentPortfolio.html">Development Portfolio</a></li>
+  </ul>
   <h1><span>Personal Introduction</span></h1>
 <div>
    <p>My name is Will Carrasco, and I'm a 22 year old sudent at Chico State
