--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <ul>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/personalIntroduction.html">Home</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/Interests.html">Interests</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/index.html">Computer Biography</a></li>
-  <li><a href="file:///C:/Users/willc/PersonalBioProject/DevelopmentPortfolio.html">Development Portfolio</a></li>
+  <li><a href="personalIntroduction.html">Home</a></li>
+  <li><a href="Interests.html">Interests</a></li>
+  <li><a href="index.html">Computer Biography</a></li>
+  <li><a href="DevelopmentPortfolio.html">Development Portfolio</a></li>
 </ul>
   <h1><span>Computer Biography</span></h1>
 <div>
